# Saber

./: .gitignore  LICENSE  README.md  components.d.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  windi.config.ts
saber-engine/: Cargo.toml
saber-engine/src/: lib.rs
saber-engine/src/synth/: mod.rs  synth_processor.rs
saber-engine/src/synth/config/: mod.rs
saber-engine/src/synth/nodes/: mod.rs  saw.rs
saber-engine/src/wrapped/: log.rs  mod.rs  rand.rs
src/: App.vue  main.ts  shims.d.ts
src/components/: Card.vue  HBtn.vue  HBtnGroup.vue  HSlider.vue  HSpacer.vue  Modifier.vue  SquareBtn.vue  SquareBtnToggle.vue  TitleCard.vue
src/components/Main/: Column.vue  FourierTransform.vue  FourierVisualizer.vue  FrequencyView.vue  Keyboard.vue  NavBar.vue  Oscillator.vue  PianoKey.vue  SynthDisplay.vue
src/components/Main/FlexZone/: FourierVisualizer.vue  Spectrum.vue  Visuals.vue  Waveform.vue
src/components/Main/Footer/: Footer.vue
src/components/Main/Oscillators/: Modifier.vue  Modifiers.vue  NewOscillator.vue  Oscillator.vue  Oscillators.vue
src/logic/: fft.ts  fourierRenderer.ts  fourierVisualizer.ts  frequencyViewer.ts  keysound.ts  midi.ts  oscManager.ts  randstr.ts  renderer.ts  sampleRate.ts  synth.ts  synthRenderer.ts  synths.ts  useFourier.ts
src/modules/: ripple.ts
src/pages/: AudioBufferTest.vue  Display.vue  FourierTransform.vue  Main.vue  NavBar.vue  NewMain.vue  Synth.vue  SynthDisplay.vue  index.vue
