[package]
name = "saber-engine"
version = "0.1.0"
authors = ["Bluskript <bluskript@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.51"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }

[dependencies.web-sys]
version = "0.3.51"
features = [
  "console",
]